mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: pfi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-deployment
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args:
          - "--ignore-db-dir=lost+found"
        ports:
        - name: http-port
          containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mysql-volumemount
      volumes:
        - persistentVolumeClaim:
            claimName: nfs-mysql
          name: mysql-volumemount
