pfi-frontend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pfi-deployment
  namespace: pfi
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: pfi
    spec:
      containers:
      - name: pfi
        image: pcr-internal.puppet.net/pipelines/pfi:latest
        ports:
        - containerPort: 7000
          hostPort: 7000
          protocol: TCP
        - containerPort: 8080
          hostPort: 8080
          protocol: TCP
        - containerPort: 8000
          hostPort: 8000
          protocol: TCP
