pfi-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfi-backend
  namespace: pfi
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: pfi
  type: NodePort
